--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
+@import './custom.css';
 @tailwind utilities;
 
 @layer utilities {
@@ -36,6 +37,17 @@
   .btn-tertiary {
     @apply btn border-none shadow-none text-muted hover:text-gray-900 dark:text-gray-400 dark:hover:text-white;
   }
+
+  /* CUSTOM CSS */
+  .btn-blu {
+    @apply inline-flex items-center justify-center rounded-full border-gray-400 border bg-transparent font-medium text-center text-base text-page leading-snug transition py-3.5 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 cursor-pointer font-semibold text-white;
+    background-color: #48bbc9;
+    border-color: #48bbc9;
+  }
+  .btn-blu:hover {
+    background-color: #3d3d3d;
+    border-color: #3d3d3d;
+  }
 }
 
 #header.scroll > div:first-child {
@@ -44,7 +56,7 @@
 }
 .dark #header.scroll > div:first-child,
 #header.scroll.dark > div:first-child {
-  @apply bg-page md:bg-[#030621e6] border-b border-gray-500/20;
+  @apply bg-page md:bg-[#181818] border-b border-gray-500/20;
   box-shadow: none;
 }
 /* #header.scroll > div:last-child {
@@ -90,3 +102,10 @@
 .dd *:first-child {
   margin-top: 0;
 }
+
+  /* CUSTOM CSS: FORM OPTIONS BACKGROUND */
+
+  select option {
+    background-color: #212121;
+    color: white;
+  }
