--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -22,19 +22,22 @@ const {
 ---
 
 <WidgetWrapper id={id} isDark={isDark} containerClass={`max-w-7xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
-  <Headline title={title} subtitle={subtitle} tagline={tagline} />
+<Headline title={title} subtitle={subtitle} tagline={tagline} />
 
-  {
-    inputs && (
-      <div class="flex flex-col max-w-xl mx-auto rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-4 sm:p-6 lg:p-8 w-full">
-        <FormContainer
-          inputs={inputs}
-          textarea={textarea}
-          disclaimer={disclaimer}
-          button={button}
-          description={description}
-        />
-      </div>
-    )
-  }
+<!-- New slot for buttons -->
+<slot name="buttons" />
+
+{
+  inputs && (
+    <div class="flex flex-col max-w-xl mx-auto rounded-lg backdrop-blur border border-gray-500/20 dark:bg-[#212121] shadow p-4 sm:p-6 lg:p-8 w-full">
+      <FormContainer
+        inputs={inputs}
+        textarea={textarea}
+        disclaimer={disclaimer}
+        button={button}
+        description={description}
+      />
+    </div>
+  )
+}
 </WidgetWrapper>
