--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -14,9 +14,9 @@ const {
 } = Astro.props;
 ---
 
-<section class="bg-blue-50 dark:bg-slate-800 not-prose">
+<section class="bg-blue-50 dark:bg-[#3d3d3d] not-prose mb-12 md:mb-16 lg:mb-20">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
-    <Icon name={icon} class="w-5 h-5 inline-block align-text-bottom font-bold" />
+ <!-- EDIT: HIDE ICON   <Icon name={icon} class="w-5 h-5 inline-block align-text-bottom font-bold" /> --> 
     <span class="font-bold" set:html={title} />
     <Fragment set:html={description} />
   </div>
