--- a/src/components/widgets/Pricing.astro
+++ b/src/components/widgets/Pricing.astro
@@ -28,7 +28,13 @@ const {
 >
   <!-- Cancel out WidgetWrapper's top/bottom padding -->
 <div class="-mt-[20px]">
-    <Headline class="mb-0" title={title} subtitle={subtitle} tagline={tagline} />
+<Headline
+  classes={{ root: 'mb-0' }}
+  title={title}
+  subtitle={subtitle}
+  tagline={tagline}
+/>
+
     <div class="flex items-stretch justify-center">
 
     <div class="grid grid-cols-3 gap-4 dark:text-white sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3">
