--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from 'astrowind:config';
+import { _SITE } from 'astrowind:config';
 import logo from '/src/assets/images/WEIRD-BEARD-IT-compact-SML.png';
 ---
 
