--- a/src/components/widgets/Steps.astro
+++ b/src/components/widgets/Steps.astro
@@ -11,7 +11,7 @@ const {
   tagline = await Astro.slots.render('tagline'),
   items = [],
   image = await Astro.slots.render('image'),
-  isReversed = false,
+  _isReversed = false,
 
   id,
   isDark = false,
