--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from 'astro-icon/components';
+import { _Icon } from 'astro-icon/components';
 
 export interface Props {
   icon?: string;
@@ -8,7 +8,7 @@ export interface Props {
 }
 
 const {
-  icon = 'tabler:info-square',
+  _icon = 'tabler:info-square',
   title = await Astro.slots.render('title'),
   description = await Astro.slots.render('description'),
 } = Astro.props;
