--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,20 +1,18 @@
 ---
-import { _SITE } from 'astrowind:config';
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+import { SITE } from 'astrowind:config';
 import logo from '/src/assets/images/WEIRD-BEARD-IT-compact-SML.png';
 ---
 
-<!-- SITE NAME DISABLED -->
-<!-- <span
+<!-- SITE NAME DISABLED --><!-- <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
 >
   {SITE?.name}
-</span> -->
-<!-- SITE NAME DISABLED -->
-
-<!-- LOGO -->
-<div class="self-center ml-2 rtl:ml-0 rtl:mr-2"><img class="
-<!-- Logo Size -->
+</span> --><!-- SITE NAME DISABLED --><!-- LOGO -->
+<div class="self-center ml-2 rtl:ml-0 rtl:mr-2">
+  <img class="<!-- Logo Size -->
 h-12
 <!-- Logo Size -->
-w-auto" src={logo.src} alt="Site logo" /> </div>
+w-auto" src={logo.src} alt="Site logo" />
+</div>
 <!-- LOGO -->
