--- a/src/components/widgets/Features2.astro
+++ b/src/components/widgets/Features2.astro
@@ -27,8 +27,7 @@ const {
     defaultIcon={defaultIcon}
     classes={{
       container: 'gap-4 md:gap-6',
-      panel:
-  'relative rounded-lg backdrop-blur border border-gray-500/20 dark:bg-[#212121] shadow px-6 py-8',
+      panel: 'relative rounded-lg backdrop-blur border border-gray-500/20 dark:bg-[#212121] shadow px-6 py-8',
 
       // panel:
       //   "text-center bg-page items-center md:text-left rtl:md:text-right md:items-start p-6 p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-800",
