--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -6,7 +6,8 @@ import ToggleMenu from '~/components/common/ToggleMenu.astro';
 import Button from '~/components/ui/Button.astro';
 
 import { getHomePermalink } from '~/utils/permalinks';
-import { trimSlash, _getAsset } from '~/utils/permalinks';
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+import { trimSlash, getAsset } from '~/utils/permalinks';
 import type { CallToAction } from '~/types';
 
 interface Link {
@@ -40,7 +41,8 @@ const {
   isDark = false,
   isFullWidth = false,
   showToggleTheme = false,
-  _showRssFeed = false,
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  showRssFeed = false,
   position = 'center',
 } = Astro.props;
 
@@ -136,9 +138,9 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
       ]}
     >
       <div class="items-center flex justify-between w-full md:w-auto">
-<div class="flex">
-  {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />}
-  <!-- RSS FEED DISABLED
+        <div class="flex">
+          {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />}
+          <!-- RSS FEED DISABLED
   {showRssFeed && (
     <a
       class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
@@ -149,7 +151,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
     </a>
   )}
   RSS FEED DISABLED -->
-</div>
+        </div>
 
         {
           actions?.length ? (
