--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -1,5 +1,6 @@
 ---
-import { _Icon } from 'astro-icon/components';
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+import { Icon } from 'astro-icon/components';
 
 export interface Props {
   icon?: string;
@@ -8,7 +9,8 @@ export interface Props {
 }
 
 const {
-  _icon = 'tabler:info-square',
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  icon = 'tabler:info-square',
   title = await Astro.slots.render('title'),
   description = await Astro.slots.render('description'),
 } = Astro.props;
@@ -16,7 +18,7 @@ const {
 
 <section class="bg-blue-50 dark:bg-[#3d3d3d] not-prose mb-12 md:mb-16 lg:mb-20">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
- <!-- EDIT: HIDE ICON   <Icon name={icon} class="w-5 h-5 inline-block align-text-bottom font-bold" /> --> 
+    <!-- EDIT: HIDE ICON   <Icon name={icon} class="w-5 h-5 inline-block align-text-bottom font-bold" /> -->
     <span class="font-bold" set:html={title} />
     <Fragment set:html={description} />
   </div>
