--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -2,7 +2,8 @@
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
-import _Announcement from '~/components/widgets/Announcement.astro';
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+import Announcement from '~/components/widgets/Announcement.astro';
 
 import { headerData, footerData } from '~/navigation';
 
@@ -16,13 +17,13 @@ const { metadata } = Astro.props;
 ---
 
 <Layout metadata={metadata}>
-<!-- ANNOUNCEMENT DISABLED -->
-<!-- 
+  <!-- ANNOUNCEMENT DISABLED -->
+  <!-- 
 <slot name="announcement">
     <Announcement />
   </slot>
 -->
-<!-- ANNOUNCEMENT DISABLED -->
+  <!-- ANNOUNCEMENT DISABLED -->
   <slot name="header">
     <Header {...headerData} isSticky showRssFeed showToggleTheme />
   </slot>
