--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -469,7 +469,7 @@ const metadata = {
         image: '/images/WEIRD-BEARD-IT-a1.jpg',
         socialLinks: [
           { ariaLabel: 'LinkedIn', icon: 'tabler:brand-linkedin', href: 'https://www.linkedin.com/in/anthonywithah' },
-          { ariaLabel: 'Slack', icon: 'tabler:brand-github', href: 'https://github.com/anthonywithah' },
+          { ariaLabel: 'Site', icon: 'tabler:user-square-rounded', href: 'https://anthonywithah.github.io' },
         ],
       },
       {
