--- a/src/components/ui/Timeline.astro
+++ b/src/components/ui/Timeline.astro
@@ -51,7 +51,7 @@ const {
               </div>
               {index !== items.length - 1 && <div class="w-px h-full bg-black/10 dark:bg-slate-400/50" />}
             </div>
-            <div class={`pt-1 ${index !== items.length - 1 ? 'pb-8' : ''}`}>
+            <div class={`pt-1 ${index !== items.length - 1 ? 'pb-8' : 'pb-16 md:pb-0'}`}>
               {title && <p class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)} set:html={title} />}
               {description && (
                 <p
