--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -42,8 +42,10 @@ const {
     }}
   />
   <div class="mx-auto max-w-7xl p-4 md:px-8">
-    <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
-      <div class="md:basis-1/2 self-center">
+    <div class={`flex flex-col md:flex-row ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
+      <!-- Text block -->
+      <div class="order-2 md:order-1 md:basis-1/2 self-center">
+        <!-- text -->
         {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
 
         {
@@ -68,7 +70,9 @@ const {
           }}
         />
       </div>
-      <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
+      <!-- Image block -->
+      <div aria-hidden="true" class="order-1 md:order-2 mb-8 mt-2 md:mt-0 md:basis-1/2">
+        <!-- image -->
         {
           image && (
             <div class="relative m-auto max-w-4xl">
