--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="New for Sep25 - The Beard Strikes Back"
+    tagline="The Beard Strikes Back"
     actions={[
       {
         variant: 'primary',
