--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -27,7 +27,7 @@ const {
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6">
     <div class="pt-0 md:pt-[76px] pointer-events-none"></div>
     <div class="py-12 md:py-20">
-      <div class="text-center pb-10 md:pb-16 max-w-5xl mx-auto">
+      <div class="text-center pb-6 md:pb-10 max-w-5xl mx-auto">
         {
           tagline && (
             <p
@@ -53,6 +53,28 @@ const {
               />
             )
           }
+
+          <!-- Image ABOVE buttons -->
+          {
+            image && (
+              <div class="relative m-auto max-w-5xl mb-6 intersect-once intersect-no-queue intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+                {typeof image === 'string' ? (
+                  <Fragment set:html={image} />
+                ) : (
+                  <Image
+                    class="mx-auto rounded-md h-auto max-w-[788px]"
+                    widths={[400, 768]}
+                    sizes="100vw"
+                    loading="eager"
+                    width={788}
+                    height={332}
+                    {...image}
+                  />
+                )}
+              </div>
+            )
+          }
+
           {
             actions && (
               <div class="max-w-xs sm:max-w-md m-auto flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
@@ -70,29 +92,6 @@ const {
           }
         </div>
         {content && <Fragment set:html={content} />}
-      </div>
-      <div
-        class="intersect-once intersect-no-queue intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
-      >
-        {
-          image && (
-            <div class="relative m-auto max-w-5xl">
-              {typeof image === 'string' ? (
-                <Fragment set:html={image} />
-              ) : (
-                <Image
-                  class="mx-auto rounded-md h-auto max-w-[788px]"
-                  widths={[400, 768]}
-                  sizes="100vw"
-                  loading="eager"
-                  width={788}
-                  height={332}
-                  {...image}
-                />
-              )}
-            </div>
-          )
-        }
       </div>
     </div>
   </div>
